I just made a change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
                             <div id="add-post-box">
 
                             </div>
-                            <div class="loadMore" id="newsfeed">
+                            <div class="loadMore" id="news
+                        ">
 
                             </div>
                         </div>
