Everything working fine

--- a/public/css/styles/auth.css
+++ b/public/css/styles/auth.css
@@ -2,5 +2,5 @@
     background: url("../../img/signupbg.jpg");
     background-size: cover; 
     background-position: center; 
-    background-repeat: repeat; 
+    background-repeat: no-repeat; 
 }
