--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -9,6 +9,7 @@
 
   </head>
 
+
   <body>
       <div class="theme-layout">
           <div class="topbar stick" style="display: grid; grid-template-columns: 1fr 3fr;">
@@ -18,7 +19,7 @@
                   </a>
               </div>
 
-              <div class="top-area" style="display: flex; justify-content: right; justify-self: flex-end; align-items: center;">
+              <div class="top-area" style="justify-self: flex-end;">
                   <ul class="main-menu" id="main-menu">
 
                   </ul>
@@ -30,89 +31,170 @@
               </div>
           </div>
         
-      
     <script>
       var mainURL = "http://localhost:3000";
+    
+       function createLikesSection(data) {
+      var isLiked = false;
 
-      
-function showAddPost() {
-  var html = "";
+    // Check if the current user has liked the post
+    for (var b = 0; b < data.likers.length; b++) {
+        var liker = data.likers[b];
+        if (liker._id === window.user._id) {
+            isLiked = true;
+            break;
+        }
+    }
 
-  if (localStorage.getItem("accessToken")) {
-    const profileImage = window.userProfileImage
-    html += `
-      <div class="central-meta">
-        <div class="new-postbox">
-          <figure>
-            <img src="${profileImage}" alt="User Profile Image">
-          </figure>
-          <div class="newpst-input">
-            <form method="post" id="form-add-post" onsubmit="return doPost(this);">
-              <input name="type" type="hidden" value="post">
-              <textarea rows="3" name="caption" placeholder="Write something..."></textarea>
-              <div class="attachments">
-                <ul>
-                  <li>
-                    <img id="post-img-preview" style="display: none;" alt="Image Preview">  
-                  </li>
-                  <li>
-                    <video id="post-video-preview" controls style="display: none;">  
-                      Your browser does not support the video tag.
-                    </video>
-                  </li>
-                  <li>
-                    <i class="fa fa-image"></i>
-                    <label class="fileContainer">
-                      <input type="file" name="image" accept="image/*" onchange="previewPostImage(this);">
-                    </label>
-                  </li>
-                  <li>
-                    <i class="fa fa-video-camera"></i>
-                    <label class="fileContainer">
-                      <input type="file" name="video" accept="video/*" onchange="previewPostVideo(this);">
-                    </label>
-                  </li>
-                </ul>
-              </div>
-              <button type="submit" class="mtr-btn"><span>Post</span></button>
-            </form>
-          </div>
-        </div>
-      </div>
+    // Set the class based on whether the user has liked the post
+    var className = isLiked ? "like" : "none";
+
+    // Construct the HTML with dynamic values
+    var html = `
+        <div class="we-video-info">
+            <ul>
+                <li>
+                    <span class="${className}" onclick="toggleLikePost(this);" data-id="${data._id}">
+                        <i class="ti-thumb-up"></i>
+                        <ins>${data.likers.length}</ins> <!-- Display the number of likes -->
+                    </span>
+                </li>      
+                <li>
+                    <span class="comment" title="comments">
+                        <i class="fa fa-comments-0"></i>
+                        <ins>${data.comments.length}</ins> 
+                    </span>
+                </li>   
+                <li>
+                    <span class="share" onclick="sharePost(this);" data-id="${data._id}">
+                        <i class="ti-share"></i>
+                        <ins>${data.shares.length}</ins> 
+                    </span>
+                </li>  
+            </ul>
+        </div>        
     `;
 
-    document.getElementById("add-post-box").innerHTML = html;
-  }
+    return html; 
+}
+    
+function toggleLikePost(self) {
+    const accessToken = localStorage.getItem("accessToken");
+
+    if (accessToken) {
+        var _id = self.getAttribute("data-id");
+
+        var ajax = new XMLHttpRequest();
+        ajax.open("POST", "/toggleLikePost", true);
+        ajax.setRequestHeader("Authorization", `Bearer ${accessToken}`);
+        ajax.setRequestHeader("post-id", _id);
+        
+        ajax.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                var res = JSON.parse(this.responseText);
+
+                if (res.status === "success") {
+                    self.className = "like";
+                    var likes = parseInt(self.querySelector("ins").innerHTML);
+                    likes++;
+                    self.querySelector("ins").innerHTML = likes;
+                }
+                if (res.status === "unliked") {
+                    self.className = "none";
+                    var likes = parseInt(self.querySelector("ins").innerHTML);
+                    likes--;
+                    self.querySelector("ins").innerHTML = likes;
+                }
+                if (res.status === "error") {
+                    alert(res.message);
+                }
+            }
+        };
+
+        ajax.send();  // No need for formData since we're sending ID in headers
+    }
 }
 
-function previewPostImage(self){
-   var file = self.files;
-   if(file.length > 0){
-    var fileReader = new FileReader();
+      
 
-    fileReader.onload = function(event){
-      document.getElementById("post-img-preview").style.display = "";
-      document.getElementById("post-img-preview").setAttribute("src", event.target.result);
-    };
+      function showAddPost() {
+        var html = "";
 
-    fileReader.readAsDataURL(file[0]);
-   }
-} 
+        if (localStorage.getItem("accessToken")) {
+          const profileImage = window.userProfileImage
+          html += `
+            <div class="central-meta">
+              <div class="new-postbox">
+                <figure>
+                  <img src="${profileImage}" alt="User Profile Image">
+                </figure>
+                <div class="newpst-input">
+                  <form method="post" id="form-add-post" onsubmit="return doPost(this);">
+                    <input name="type" type="hidden" value="post">
+                    <textarea rows="3" name="caption" placeholder="Write something..."></textarea>
+                    <div class="attachments">
+                      <ul>
+                        <li>
+                          <img id="post-img-preview" style="display: none;" alt="Image Preview">  
+                        </li>
+                        <li>
+                          <video id="post-video-preview" controls style="display: none;">  
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+                        <li>
+                          <i class="fa fa-image"></i>
+                          <label class="fileContainer">
+                            <input type="file" name="image" accept="image/*" onchange="previewPostImage(this);">
+                          </label>
+                        </li>
+                        <li>
+                          <i class="fa fa-video-camera"></i>
+                          <label class="fileContainer">
+                            <input type="file" name="video" accept="video/*" onchange="previewPostVideo(this);">
+                          </label>
+                        </li>
+                      </ul>
+                    </div>
+                    <button type="submit" class="mtr-btn"><span>Post</span></button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          `;
+
+          document.getElementById("add-post-box").innerHTML = html;
+        }
+      }
+
+      function previewPostImage(self){
+        var file = self.files;
+        if(file.length > 0){
+          var fileReader = new FileReader();
+
+          fileReader.onload = function(event){
+            document.getElementById("post-img-preview").style.display = "";
+            document.getElementById("post-img-preview").setAttribute("src", event.target.result);
+          };
+
+          fileReader.readAsDataURL(file[0]);
+        }
+      } 
 
 
-function previewPostVideo(self){
-   var file = self.files;
-   if(file.length > 0){
-    var fileReader = new FileReader();
+      function previewPostVideo(self){
+        var file = self.files;
+        if(file.length > 0){
+          var fileReader = new FileReader();
 
-    fileReader.onload = function(event){
-      document.getElementById("post-video-preview").style.display = "";
-      document.getElementById("post-video-preview").setAttribute("src", event.target.result);
-    };
+          fileReader.onload = function(event){
+            document.getElementById("post-video-preview").style.display = "";
+            document.getElementById("post-video-preview").setAttribute("src", event.target.result);
+          };
 
-    fileReader.readAsDataURL(file[0]);
-   }
-}
+          fileReader.readAsDataURL(file[0]);
+        }
+      }
 
 /*
 function showAddPost() {
