--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -64,6 +64,9 @@
                                         </button>
                                     </div>
                                 </form>
+                                <br>
+                                <a href="/" style="color: #e3a103; text-align: right;">Back to HomePage</a>
+                            </div>
                             </div>
                         </div>
                     </div>
