--- a/public/css/style.css
+++ b/public/css/style.css
@@ -739,7 +739,7 @@ a{
     background-color: #00A859;
     color: white;
 }
- 
+
 
 .login-reg-bg{
     background-color: #d1b687;
@@ -1579,13 +1579,14 @@ form button {
     font-size: 13px;
     margin-right: 40px;
 }
-
+ 
 .we-video-info > ul li span {
     font-size: 16px;
     font-weight: 400;
-    margin-right: 3px;
+    margin-right: 15px;
     position: relative;
 }
+
 
 .we-video-info > ul li.upload-date {
     float: right;
@@ -1634,7 +1635,7 @@ form button {
 }
 
 .we-video-info > ul li span.like:hover .we-video-info > ul li span.dislike:hover {
-    trnsform: scale(1.1);
+    transform: scale(1.1);
 }
 
 
