--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,8 @@
                     </button>
                   </div>
                 </form>
-              
+              <br>
+                <a href="/" style="color: #e3a103; text-align: right;">Back to HomePage</a>
             </div>
           
         </div>
