Ready to be deployed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="hero">
 
         <div class="nav">
-            <img src="../public/img/logo.png" alt="logo" id="logo" style="width: 100px; height: 100px;">
+            <img src="../public/img/Safe9jaLogo1.svg" alt="logo" id="logo">
 
             <nav>
                 <a href="/" class="navLink">Home</a>
@@ -39,7 +39,7 @@
                 <h5>Report incidents or receive notifications for natural disasters and emergencies in your area to ensure you and your loved ones stay protected.</h5>
 
                 <div class="CTAs">
-                    <a href="/login"><button class="fillBtn" style="background-color: red;;">Report incidents</button></a>
+                    <a href="/login"><button class="fillBtn">Report incidents</button></a>
                     <a href="/aiBotProfile"><button class="fillBtnWhite">Meet Angela</button></a>
                 </div>
 
