--- a/public/css/styles/index.css
+++ b/public/css/styles/index.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 :root {
-    --orange: #00A859;
+    --orange: #FF8800;
     --white: #fff;
     --offWhite: #EBEBEB;
     --black: #1E1E1E;
@@ -103,7 +103,6 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-
 }
 
 .fillBtnWhite{
@@ -128,9 +127,9 @@ h1 {
 }
 
 h1 .brownText {
-    color: #e3a103;
+    color: #FF8800;
 }
-/*#FF8800*/
+
 h5 {
     font-family: "Bricolage Grotesque";
     font-size: 1.6rem;
@@ -148,8 +147,8 @@ h5 {
     padding: 1rem 2rem;
     border-radius: 0.5rem;
     background-color: var(--white);
+    
 }
-
 
 .stat {
     display: flex;
@@ -161,7 +160,7 @@ h5 {
 }
 
 .stat h3 {
-    color: #e3a103;
+    color: var(--orange);
     font-family: "Bricolage Grotesque";
     font-size: 1.5rem;
     font-weight: 700;
@@ -172,7 +171,6 @@ h5 {
     font-family: "Bricolage Grotesque";
     font-size: 1rem;
     font-weight: 500;
-
 }
 
 .line {
